feat: added two more trgs (draft) describing community processes

--- a/documentation/kit-framework.mdx
+++ b/documentation/kit-framework.mdx
@@ -127,7 +127,7 @@ KITs in Eclipse Tractus-X are organized into four main categories, each serving 
 <KitCategoryCard 
   icon={VpnLockIcon}
   title="Dataspace Foundation"
-  description="Essential KITs that provide the core infrastructure and foundational capabilities required for any dataspace."
+  description="The Dataspace Foundation Category, contains KITs that provide the network basis for industrial dataspace to built, following security, decentralization, self-sovereign and scalable principles. This Core components are required for maintaining interoperability between the different use cases that will be built in the future. Assuring that the data exchange is possible and a 'common language' is spoken between the industry core foundation components."
   highlight='Exchange "bytes" using dataspace technology in a secure and sovereign manner.'
   examples={['Connector KIT', 'Data Trust & Security KIT', 'Data Governance KIT']}
   color="primary"
