--- a/documentation/kit-getting-started.mdx
+++ b/documentation/kit-getting-started.mdx
@@ -681,14 +681,24 @@ Congratulations! Your KIT is now part of the Eclipse Tractus-X ecosystem!
 
 ## Additional Resources
 
+### KIT Documentation
+
+- [KIT Framework](./kit-framework) - Complete guide to KIT structure, artifacts, and requirements
+- [KIT Lifecycle](./kit-lifecycle) - KIT maturity levels, graduation, and maintenance processes
+- [KIT Master Data Overview](./kit-master-data-overview) - Complete KIT metadata, statistics, and data structure
+- [KIT Statistics](./kit-statistics) - Analytics dashboard for KIT ecosystem metrics
+
 ### Documentation References
 
-- [TRG 9.02 KIT Maturity Levels](./kit-lifecycle)
-- [TRG 9.03 KIT Framework](./kit-framework)
-- [Tractus-X Developer Hub](https://eclipse-tractusx.github.io/docs/developer)
-- [Community Guidelines](https://eclipse-tractusx.github.io/community)
+#### KIT-Specific TRGs (Tractus-X Release Guidelines)
 
-### Templates & Examples
+- [TRG 10.01 - KIT Architecture](/docs/release/trg-10/trg-10-01) - KIT framework categories and classification
+- [TRG 10.02 - KIT Content Structure](/docs/release/trg-10/trg-10-02) - Required content and structure
+- [TRG 10.03 - KIT Lifecycle](/docs/release/trg-10/trg-10-03) - Maturity levels and lifecycle management
+- [TRG 10.04 - KIT Graduation Process](/docs/release/trg-10/trg-10-04) - Graduation requirements and process
+- [TRG 10.05 - KIT Deprecation Process](/docs/release/trg-10/trg-10-05) - Deprecation criteria and procedures
 
-- [Existing KIT Examples](https://eclipse-tractusx.github.io/Kits)
-- [Documentation Style Guide](/docs/website-guidelines/kit-structure)
+#### Legal & Licensing
+
+- [TRG 7.07 - Legal notice for non-code](/docs/release/trg-7/trg-7-07) - Image and media licensing requirements
+- [TRG 7.08 - Legal notice for KIT documentation (CC-BY-4.0)](/docs/release/trg-7/trg-7-08) - Documentation licensing
