--- a/docs/release/trg-10/trg-10-01.mdx
+++ b/docs/release/trg-10/trg-10-01.mdx
@@ -24,7 +24,7 @@ A detailed explanation can be found here:
 
 ## Master Data
 
-- Every KIT must be added to the [KIT master data](../../../documentation/kit-master-data-overview), which is located at the `/docs/kitData.js` file, and it must follow the structure described in this [JSON schema](../../../utils/schemas/kitsData.schema.json) and at the [documentation](./documentation/kit-master-data-overview).
+- Every KIT must be added to the [KIT master data](../../../documentation/kit-master-data-overview), which is located at the `/docs/kitData.js` file, and it must follow the structure described in this [JSON schema](../../../utils/schemas/kitsData.schema.json) and at the [documentation](../../../documentation/kit-master-data-overview).
 - The Masted Data structure must be respected, since it is used for autoomatization of the KIT webpage generation, for that automated checks are done in compilation time.
 
 import ArchitectureDiagram from '@site/src/components/2.0/KitArchitectureDiagram';
@@ -38,24 +38,24 @@ In order to provide intereperability and a clear context where a KIT is used wit
 ### Dataspace Foundation
 The Dataspace Foundation Category, contains KITs that provide the network basis for industrial dataspace to built, following security, decentralization, self-sovereign and scalable principles. This Core components are required for maintaining interoperability between the different use cases that will be built in the future. Assuring that the data exchange is possible and a 'common language' is spoken between the industry core foundation components.
 
-See [Dataspace Foundation KITs](../../../documentation/kit-master-data-overview#dataspace-foundation)
+See [Dataspace Foundation KITs](https://eclipse-tractusx.github.io/documentation/kit-master-data-overview#dataspace-foundation)
 
 Here is a [filtered view](/Kits/dataspace-foundation) from the dataspace foundation kits.
 
 ### Industry Core Foundation
 The Industry Core Foundation category contains KITs that provide common capabilities and standards shared across all use cases within any industry. These KITs define the core data models, digital twin concepts, and cross-functional services that multiple use cases depend upon, allowing use cases to be built in the future, keeping the interoperability and a common ground
 
-See [Industry Core Foundation KITs](../../../documentation/kit-master-data-overview#industry-core-foundation)
+See [Industry Core Foundation KITs](https://eclipse-tractusx.github.io/documentation/kit-master-data-overview#industry-core-foundation)
 
 ### Cross-Industry Use Cases
 The Cross-Industry Use Cases category includes KITs that address specific business scenarios and challenges applicable across multiple industries or the entire dataspace. These KITs solve concrete business problems related to sustainability, quality, supply chain management, and other horizontal concerns that span industry boundaries.
 
-See [Cross-Industry Use Cases KITs](../../../documentation/kit-master-data-overview#cross-industry-use-cases)
+See [Cross-Industry Use Cases KITs](https://eclipse-tractusx.github.io/documentation/kit-master-data-overview#cross-industry-use-cases)
 
 ### Industry Specific Use Cases
 The Industry-Specific Use Cases category contains KITs tailored to address unique challenges and requirements of particular industries or vertical domains. These KITs provide specialized functionality that may only be relevant within a specific industry context, such as shop floor operations or sector-specific regulatory requirements.
 
-See [Industry Specific Use Cases KITs](../../../documentation/kit-master-data-overview#industry-specific-use-cases)
+See [Industry Specific Use Cases KITs](https://eclipse-tractusx.github.io/documentation/kit-master-data-overview#industry-specific-use-cases)
 
 ## KIT Domains
 
